# roman2arabic

./: CMakeLists.txt  README.md
apps/: roman2arabic.cpp
include/roman2arabiclib/: lib.hpp
src/: roman2arabiclib.cpp
tests/: unittests.cpp
